--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Padel homesite</title>
     <link rel="stylesheet" href="./build/css/style.css" />
-    <link rel="icon" type="image/png" href="./images/favicon.png" />
+    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
 </head>
 <body>
 <header>
