--- a/0_Padel_Website/src/html/profile.html
+++ b/0_Padel_Website/src/html/profile.html
@@ -1,10 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+        <section>
+            <h1>Log hier in</h1>
+            <h2>Vul hieronder je gegevens in</h2>
+            <p>
+                @pla_id@,@pla_name@,@pla_surname@
+            </p>
+        </section>
+        <section>
+            <h1>Wijzig gegevens indien nodig</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt
+                dolore quas pariatur accusamus impedit tempore inventore aliquid
+                quia et sequiimilique, minus alias?
+            </p>
+        </section>
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eius
+                molestiae amet numquam cupiditate nihil rerum libero illo, nobis
+                expedita odit eaque ducimus laudantium dignissimos, error et
+                pariatur exercitationem excepturi repudiandae illum! Modi quod
+                voluptatem temporibus sint corrupti quis corporis.
+            </p>
+        </section>
+        <section>
+            <h1>Improvements (optioneel)</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eius
+                molestiae amet numquam cupiditate nihil rerum libero illo, nobis
+                expedita odit eaque ducimus laudantium dignissimos, error et
+                pariatur exercitationem excepturi repudiandae illum! Modi quod
+                voluptatem temporibus sint corrupti quis corporis.
+            </p>
+        </section>
+        <section>
+            <h1>Payed games</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eius
+                molestiae amet numquam cupiditate nihil rerum libero illo, nobis
+                expedita odit eaque ducimus laudantium dignissimos, error et
+                pariatur exercitationem excepturi repudiandae illum! Modi quod
+                voluptatem temporibus sint corrupti quis corporis.
+            </p>
+        </section>
+        <section>
+            <h1>Friends</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eius
+                molestiae amet numquam cupiditate nihil rerum libero illo, nobis
+                expedita odit
+            </p>
+        </section>
