login html update

--- a/0_Padel_Website/src/html/login.html
+++ b/0_Padel_Website/src/html/login.html
@@ -2,11 +2,11 @@
   <div class="login">
     <h1>Login</h1>
     <form method="post">
-      <input type="text" name="user" placeholder="Username" required="required" />
+      <input type="text" name="user" placeholder="e-mail" required="required" />
       <input
               type="password"
               name="p"
-              placeholder="Password"
+              placeholder="Wachtwoord"
               required="required"
       />
       <button type="submit" class="button">Let me in</button>
