--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="container">
-        <a class="logo" href="./index.html">
+        <a class="logo" href="../../index.php">
             <svg class="icon icon-gear">
                 <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
             </svg>
@@ -18,7 +18,7 @@
         </a>
         <nav>
             <ul>
-                <li><a class="active" href="./index.html">Home</a></li>
+                <li><a class="active" href="../../index.php">Home</a></li>
                 <li><a href="./src/html/booking.html">Booking</a></li>
                 <li><a href="./src/html/profile.html">Profile</a></li>
             </ul>
