--- a/0_Padel_Website/src/html/footer.html
+++ b/0_Padel_Website/src/html/footer.html
@@ -1,42 +1,34 @@
 <footer>
     <div class="container">
-        <section>
-            <nav>
-                <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <li><a href="./src/html/booking.html">Booking</a></li>
-                    <li><a href="./src/html/profile.html">Profile</a></li>
-                </ul>
-            </nav>
-        </section>
+        
         <section>
             <div class="number">
                 <a href="#">
-                    <svg class="icon icon-gear">
-                        <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
+                    <svg class="icon icon-phone">
+                        <use xlink:href="./icons/symbol-defs.svg#icon-phone"></use>
                     </svg>
                     <span>+32 (0)3 449 09 18</span>
                 </a>
             </div>
             <div class="social">
                 <a href="#">
-                    <svg class="icon icon-gear">
-                        <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
+                    <svg class="icon icon-googleplus">
+                        <use xlink:href="./icons/symbol-defs.svg#icon-googleplus"></use>
                     </svg>
                 </a>
                 <a href="#">
-                    <svg class="icon icon-gear">
-                        <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
+                    <svg class="icon icon-facebook">
+                        <use xlink:href="./icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </a>
                 <a href="#">
-                    <svg class="icon icon-gear">
-                        <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
+                    <svg class="icon icon-twitter">
+                        <use xlink:href="./icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                 </a>
                 <a href="#">
-                    <svg class="icon icon-gear">
-                        <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
+                    <svg class="icon icon-linkedin">
+                        <use xlink:href="./icons/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </div>
@@ -45,7 +37,7 @@
             <div class="mapouter">
                 <div class="gmap_canvas">
                     <iframe
-                            width="300"
+                            width="600"
                             height="200"
                             id="gmap_canvas"
                             src="https://maps.google.com/maps?q=park%20spoor&t=&z=15&ie=UTF8&iwloc=&output=embed"
@@ -60,13 +52,13 @@
                         position: relative;
                         text-align: right;
                         height: 200px;
-                        width: 300px;
+                        width: 600px;
                     }
                     .gmap_canvas {
                         overflow: hidden;
                         background: none !important;
                         height: 200px;
-                        width: 300px;
+                        width: 600px;
                     }
                 </style>
                     <a href="https://codepen.io/embed-google-map/full/BaLrEGr"></a>
