--- a/0_Padel_Website/icons/demo-external-svg.html
+++ b/0_Padel_Website/icons/demo-external-svg.html
@@ -14,91 +14,46 @@
 </div>
 </header>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-mail"><use xlink:href="symbol-defs.svg#icon-mail"></use></svg><span class="name"> icon-mail</span>
-            </div>
-        </div>
+        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
                 <svg class="icon icon-phone"><use xlink:href="symbol-defs.svg#icon-phone"></use></svg><span class="name"> icon-phone</span>
             </div>
         </div>
-        <div class="glyph fs1">
+  </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
+        <div class="glyph fs2">
             <div class="clearfix pbs">
-                <svg class="icon icon-gear"><use xlink:href="symbol-defs.svg#icon-gear"></use></svg><span class="name"> icon-gear</span>
+                <svg class="icon icon-phone1"><use xlink:href="symbol-defs.svg#icon-phone1"></use></svg><span class="name"> icon-phone1</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs2">
             <div class="clearfix pbs">
-                <svg class="icon icon-left"><use xlink:href="symbol-defs.svg#icon-left"></use></svg><span class="name"> icon-left</span>
+                <svg class="icon icon-linkedin"><use xlink:href="symbol-defs.svg#icon-linkedin"></use></svg><span class="name"> icon-linkedin</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs2">
             <div class="clearfix pbs">
-                <svg class="icon icon-logo"><use xlink:href="symbol-defs.svg#icon-logo"></use></svg><span class="name"> icon-logo</span>
+                <svg class="icon icon-googleplus"><use xlink:href="symbol-defs.svg#icon-googleplus"></use></svg><span class="name"> icon-googleplus</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs2">
             <div class="clearfix pbs">
-                <svg class="icon icon-pencil"><use xlink:href="symbol-defs.svg#icon-pencil"></use></svg><span class="name"> icon-pencil</span>
+                <svg class="icon icon-twitter"><use xlink:href="symbol-defs.svg#icon-twitter"></use></svg><span class="name"> icon-twitter</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs2">
             <div class="clearfix pbs">
-                <svg class="icon icon-right"><use xlink:href="symbol-defs.svg#icon-right"></use></svg><span class="name"> icon-right</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-search"><use xlink:href="symbol-defs.svg#icon-search"></use></svg><span class="name"> icon-search</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-stack"><use xlink:href="symbol-defs.svg#icon-stack"></use></svg><span class="name"> icon-stack</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-suitcase"><use xlink:href="symbol-defs.svg#icon-suitcase"></use></svg><span class="name"> icon-suitcase</span>
+                <svg class="icon icon-facebook"><use xlink:href="symbol-defs.svg#icon-facebook"></use></svg><span class="name"> icon-facebook</span>
             </div>
         </div>
   </div>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 14</h1>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-print"><use xlink:href="symbol-defs.svg#icon-print"></use></svg><span class="name"> icon-print</span>
-            </div>
-        </div>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-map-marker"><use xlink:href="symbol-defs.svg#icon-map-marker"></use></svg><span class="name"> icon-map-marker</span>
-            </div>
-        </div>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-camera-retro"><use xlink:href="symbol-defs.svg#icon-camera-retro"></use></svg><span class="name"> icon-camera-retro</span>
-            </div>
-        </div>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-feed"><use xlink:href="symbol-defs.svg#icon-feed"></use></svg><span class="name"> icon-feed</span>
-            </div>
-        </div>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-truck"><use xlink:href="symbol-defs.svg#icon-truck"></use></svg><span class="name"> icon-truck</span>
-            </div>
-        </div>
-  </div>
-    <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
+        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
         <div class="glyph fs3">
             <div class="clearfix pbs">
-                <svg class="icon icon-menu"><use xlink:href="symbol-defs.svg#icon-menu"></use></svg><span class="name"> icon-menu</span>
+                <svg class="icon icon-sports_tennis"><use xlink:href="symbol-defs.svg#icon-sports_tennis"></use></svg><span class="name"> icon-sports_tennis</span>
             </div>
         </div>
   </div>
