--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Padel homesite</title>
     <link rel="stylesheet" href="./build/css/style.css" />
-    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico"/>
-    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
-</head>
-<body>
-<header>
-    <div class="container">
+    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
         <a class="logo" href="./index.html">
-            <svg class="icon icon-gear">
-                <use xlink:href="./icons/symbol-defs.svg#icon-gear"></use>
-            </svg>
-            <span>Padelsite</span>
+          <svg class="icon icon-sports_tennis">
+            <use xlink:href="./icons/symbol-defs.svg#icon-sports_tennis"></use>
+          </svg>
+          <span>Padelsite</span>
         </a>
         <nav>
-            <ul>
-                <li><a class="active" href="./index.html">Home</a></li>
-                <li><a href="./src/html/booking.html">Booking</a></li>
-                <li><a href="./src/html/profile.html">Profile</a></li>
-            </ul>
+          <ul>
+            <li><a class="active" href="./index.html">Home</a></li>
+            <li><a href="./src/html/booking.html">Booking</a></li>
+            <li><a href="./src/html/profile.html">Profile</a></li>
+          </ul>
         </nav>
-    </div>
-</header>
+      </div>
+    </header>
+  </body>
+</html>
