footer fix + login fix + start Register

--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="container">
-        <a class="logo" href="./index.html">
+        <a class="logo" href="../php/padel_home.php">
           <svg class="icon icon-sports_tennis">
             <use xlink:href="./icons/symbol-defs.svg#icon-sports_tennis"></use>
           </svg>
@@ -19,9 +19,10 @@
         </a>
         <nav>
           <ul>
-            <li><a class="active" href="./index.html">Home</a></li>
-            <li><a href="./src/html/booking.html">Booking</a></li>
-            <li><a href="./src/html/profile.html">Profile</a></li>
+            <li><a class="active" href="../php/padel_home.php">Home</a></li>
+            <li><a href="../php/padel_bookings.php">Booking</a></li>
+            <li><a href="../php/padel_profile.php">Profile</a></li>
+            <li><a href="../php/padel_logout.php">Logout</a></li>
           </ul>
         </nav>
       </div>
