login page css klaar en register css klaar +icons

--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="nl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Padel homesite</title>
-    <link rel="stylesheet" href="./build/css/style.css" />
-    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
-    <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <a class="logo" href="../php/padel_home.php">
-          <svg class="icon icon-sports_tennis">
-            <use xlink:href="./icons/symbol-defs.svg#icon-sports_tennis"></use>
-          </svg>
-          <span>Padelsite</span>
-        </a>
-        <nav>
-          <ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Padel homesite</title>
+  <link rel="stylesheet" href="../../build/css/style.css" />
+  <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="../../images/favicon.png" />
+</head>
+<body>
+<header>
+  <div class="container">
+    <a class="logo" href="./padel_home.php">
+      <svg class="icon icon-sports_tennis">
+        <use xlink:href="../../icons/symbol-defs.svg#icon-sports_tennis"></use>
+      </svg>
+      <span>Padelsite</span>
+    </a>
+    <nav>
+      <ul>
             <li><a class="active" href="../php/padel_home.php">Home</a></li>
             <li><a href="../php/padel_bookings.php">Booking</a></li>
             <li><a href="../php/padel_profile.php">Profile</a></li>
