--- a/0_Padel_Website/src/html/login.html
+++ b/0_Padel_Website/src/html/login.html
@@ -6,7 +6,7 @@
       <!--security-->
       <input type="hidden" name="csrf" value="@csrf_token@">
       <!--end security-->
-      <input type="text" name="usr_email" placeholder="e-mail" required="required" />
+      <input type="text" name="usr_email" placeholder="E-mail" required="required" />
       <input
               type="password"
               id="usr_password"
@@ -14,7 +14,7 @@
               placeholder="Wachtwoord"
               required="required"
       />
-      <button type="submit" value="Login" class="button">Let me in</button>
+      <button type="submit" value="Login" class="button">Laat me binnen!</button>
     </form>
   </div>
 </div>
