--- a/0_Padel_Website/src/html/register.html
+++ b/0_Padel_Website/src/html/register.html
@@ -1,15 +1,32 @@
 <div class="loginbanner">
   <div class="login">
-    <h1>Login</h1>
-    <form method="post">
-      <input type="text" name="user" placeholder="e-mail" required="required" />
+    <h1>Registreer je hier! </h1>
+    <h2>Heb je al een account? <a href="../../index.php">Log dan hier in</a></h2>
+    <form id="mainform" name="mainform" method="POST" action="save.php">
+      <!-- meta info -->
+      <input type="hidden" id="table" name="table" value="user">
+      <input type="hidden" id="pkey" name="pkey" value="usr_id">
+      <input type="hidden" id="afterinsert" name="afterinsert" value="index.php">
+      <input type="hidden" id="afterupdate" name="afterupdate" value="index.php">
+      <!-- end meta info -->
+      <!--security-->
+      <input type="hidden" name="csrf" value="@csrf_token@">
+      <!--end security-->
+      <input type="text" name="usr_voornaam" placeholder="Voornaam" required="required" />
+      <!--@usr_voornaam_error@-->
+      <input type="text" name="usr_naam" placeholder="Naam" required="required" />
+      <!--@usr_naam_error@-->
+      <input type="text" name="usr_email" placeholder="E-mail" required="required" />
+      <!--@usr_email_error@-->
       <input
               type="password"
-              name="p"
+              id="usr_password"
+              name="usr_password"
               placeholder="Wachtwoord"
               required="required"
       />
-      <button type="submit" class="button">Let me in</button>
+      <!--@usr_password_error@-->
+      <button type="submit" value="Login" class="button">Registreer!</button>
     </form>
   </div>
 </div>
