--- a/0_Padel_Website/src/html/login.html
+++ b/0_Padel_Website/src/html/login.html
@@ -1,3 +1,4 @@
+<main>
 <div class="loginbanner">
   <div class="login">
     <h1>Welkom op onze padelsite! </h1>
@@ -18,3 +19,4 @@
     </form>
   </div>
 </div>
+</main>
