--- a/0_Padel_Website/src/html/footer.html
+++ b/0_Padel_Website/src/html/footer.html
@@ -11,17 +11,17 @@
                 </a>
             </div>
             <div class="social">
-                <a href="#">
+                <a href="./padel_home.php">
                     <svg class="icon icon-googleplus">
                         <use xlink:href="../../icons/symbol-defs.svg#icon-googleplus"></use>
                     </svg>
                 </a>
-                <a href="#">
+                <a href="./padel_register.php">
                     <svg class="icon icon-facebook">
                         <use xlink:href="../../icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </a>
-                <a href="#">
+                <a href="./No_Access.php">
                     <svg class="icon icon-twitter">
                         <use xlink:href="../../icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
