--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -19,7 +19,7 @@
     </a>
     <nav>
       <ul>
-            <li><a class="active" href="../php/padel_home.php">Home</a></li>
+            <li><a href="../php/padel_home.php">Home</a></li>
             <li><a href="../php/padel_bookings.php">Booking</a></li>
             <li><a href="../php/padel_profile.php">Profile</a></li>
             <li><a href="../php/padel_logout.php">Logout</a></li>
