--- a/0_Padel_Website/src/html/register.html
+++ b/0_Padel_Website/src/html/register.html
@@ -1,3 +1,4 @@
+<main>
 <div class="loginbanner">
   <div class="login">
     <h1>Registreer je hier! </h1>
@@ -30,3 +31,4 @@
     </form>
   </div>
 </div>
+</main>
