--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Padel homesite</title>
-  <link rel="stylesheet" href="../../build/css/style.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
   <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
   <link rel="shortcut icon" type="image/png" href="../../images/favicon.png" />
 </head>
@@ -19,7 +19,7 @@
     </a>
     <nav>
       <ul>
-            <li><a href="../php/padel_home.php">Home</a></li>
+            <li><a class="active" href="../php/padel_home.php">Home</a></li>
             <li><a href="../php/padel_bookings.php">Booking</a></li>
             <li><a href="../php/padel_profile.php">Profile</a></li>
             <li><a href="../php/padel_logout.php">Logout</a></li>
