--- a/0_Padel_Website/src/html/login.html
+++ b/0_Padel_Website/src/html/login.html
@@ -1,6 +1,5 @@
 <main>
-<div class="loginbanner">
-  <div class="login">
+  <div class="container login">
     <h1>Welkom op onze padelsite! </h1>
     <h2>Gelieve eerst in te loggen of te <a href="./src/php/padel_register.php">registreren!</a></h2>
     <form id="mainform" name="mainform" method="POST" action="login_check.php">
@@ -18,5 +17,4 @@
       <button type="submit" value="Login" class="button">Laat me binnen!</button>
     </form>
   </div>
-</div>
 </main>
