--- a/0_Padel_Website/src/html/register.html
+++ b/0_Padel_Website/src/html/register.html
@@ -1,6 +1,5 @@
 <main>
-<div class="loginbanner">
-  <div class="login">
+  <div class="container login">
     <h1>Registreer je hier! </h1>
     <h2>Heb je al een account? <a href="../../index.php">Log dan hier in</a></h2>
     <form id="mainform" name="mainform" method="POST" action="save.php">
@@ -30,5 +29,4 @@
       <button type="submit" value="Login" class="button">Registreer!</button>
     </form>
   </div>
-</div>
 </main>
