--- a/0_Padel_Website/src/html/header_Login.html
+++ b/0_Padel_Website/src/html/header_Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="./build/css/style.css" />
+    <link rel="stylesheet" href="./src/css/styles.css" />
     <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
 </head>
