--- a/0_Padel_Website/src/html/header_Register.html
+++ b/0_Padel_Website/src/html/header_Register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registreren</title>
-    <link rel="stylesheet" href="../../build/css/style.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
     <link rel="shortcut icon" type="image/png" href="../../images/favicon.png" />
 </head>
