--- a/0_Padel_Website/src/html/register.html
+++ b/0_Padel_Website/src/html/register.html
@@ -2,12 +2,12 @@
   <div class="container login">
     <h1>Registreer je hier! </h1>
     <h2>Heb je al een account? <a href="../../index.php">Log dan hier in</a></h2>
-    <form id="mainform" name="mainform" method="POST" action="save.php">
+    <form id="mainform" name="mainform" method="POST" action="../lib/save.php">
       <!-- meta info -->
       <input type="hidden" id="table" name="table" value="user">
       <input type="hidden" id="pkey" name="pkey" value="usr_id">
-      <input type="hidden" id="afterinsert" name="afterinsert" value="index.php">
-      <input type="hidden" id="afterupdate" name="afterupdate" value="index.php">
+      <input type="hidden" id="afterinsert" name="afterinsert" value="padel_home.php">
+      <input type="hidden" id="afterupdate" name="afterupdate" value="padel_home.php">
       <!-- end meta info -->
       <!--security-->
       <input type="hidden" name="csrf" value="@csrf_token@">
