--- a/0_Padel_Website/src/html/footer.html
+++ b/0_Padel_Website/src/html/footer.html
@@ -21,7 +21,7 @@
                         <use xlink:href="../../icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </a>
-                <a href="./No_Access.php">
+                <a href="./no_access.php">
                     <svg class="icon icon-twitter">
                         <use xlink:href="../../icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
