--- a/0_Padel_Website/src/html/register.html
+++ b/0_Padel_Website/src/html/register.html
@@ -13,11 +13,11 @@
       <input type="hidden" name="csrf" value="@csrf_token@">
       <!--end security-->
       <input type="text" name="usr_voornaam" placeholder="Voornaam" required="required" />
-      <!--@usr_voornaam_error@-->
+      @usr_voornaam_error@
       <input type="text" name="usr_naam" placeholder="Naam" required="required" />
-      <!--@usr_naam_error@-->
+      @usr_naam_error@
       <input type="text" name="usr_email" placeholder="E-mail" required="required" />
-      <!--@usr_email_error@-->
+      @usr_email_error@
       <input
               type="password"
               id="usr_password"
@@ -25,7 +25,7 @@
               placeholder="Wachtwoord"
               required="required"
       />
-      <!--@usr_password_error@-->
+      @usr_password_error@
       <button type="submit" value="Login" class="button">Registreer!</button>
     </form>
   </div>
