playercards and match html and php added

--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -18,9 +18,9 @@
         </a>
         <nav>
             <ul>
-                <li><a class="active" href="../../index.php">Home</a></li>
-                <li><a href="./src/html/booking.html">Booking</a></li>
-                <li><a href="./src/html/profile.html">Profile</a></li>
+                <li><a class="active" href="./index.php">Home</a></li>
+                <li><a href="./src/php/padel_bookings.php">Booking</a></li>
+                <li><a href="./src/php/padel_profile.php">Profile</a></li>
             </ul>
         </nav>
     </div>
