file cleanup and path correction

--- a/0_Padel_Website/src/html/header.html
+++ b/0_Padel_Website/src/html/header.html
@@ -4,25 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Padel homesite</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
-  <link rel="shortcut icon" type="image/png" href="../../images/favicon.png" />
+  <link rel="stylesheet" href="src/css/styles.css" />
+  <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
 </head>
 <body>
 <header>
   <div class="container">
     <a class="logo" href="./padel_home.php">
       <svg class="icon icon-sports_tennis">
-        <use xlink:href="../../icons/symbol-defs.svg#icon-sports_tennis"></use>
+        <use xlink:href="./icons/symbol-defs.svg#icon-sports_tennis"></use>
       </svg>
       <span>Padelsite</span>
     </a>
     <nav>
       <ul>
-            <li><a class="active" href="../php/padel_home.php">Home</a></li>
-            <li><a href="../php/padel_bookings.php">Booking</a></li>
-            <li><a href="../php/padel_profile.php">Profile</a></li>
-            <li><a href="../php/padel_logout.php">Logout</a></li>
+            <li><a class="active" href="./padel_home.php">Home</a></li>
+            <li><a href="./padel_bookings.php">Booking</a></li>
+            <li><a href="./padel_profile.php">Profile</a></li>
+            <li><a href="./padel_logout.php">Logout</a></li>
           </ul>
         </nav>
       </div>
