--- a/0_Padel_Website/src/html/match.html
+++ b/0_Padel_Website/src/html/match.html
@@ -1,6 +1,9 @@
-<table>
+<table class="match">
     <tr>
-        <th colspan="2">@mat_time@</th>
+        <th colspan="5">@mat_time@</th>
+    </tr>
+    <tr>
+        <th colspan="2">@cou_name@</th>
         <th>Set 1</th>
         <th>Set 2</th>
         <th>Set 3</th>
