--- a/0_Padel_Website/src/html/footer_Login.html
+++ b/0_Padel_Website/src/html/footer_Login.html
@@ -11,17 +11,17 @@
                 </a>
             </div>
             <div class="social">
-                <a href="./src/php/padel_home.php">
+                <a href="../../padel_home.php">
                     <svg class="icon icon-googleplus">
                         <use xlink:href="./icons/symbol-defs.svg#icon-googleplus"></use>
                     </svg>
                 </a>
-                <a href="./src/php/padel_register.php">
+                <a href="../../padel_register.php">
                     <svg class="icon icon-facebook">
                         <use xlink:href="./icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </a>
-                <a href="./src/php/no_access.php">
+                <a href="../../no_access.php">
                     <svg class="icon icon-twitter">
                         <use xlink:href="./icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
