--- a/0_Padel_Website/src/html/header_No_Access.html
+++ b/0_Padel_Website/src/html/header_No_Access.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 GEEN TOEGANG</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="src/css/styles.css" />
     <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
     <link rel="shortcut icon" type="image/png" href="../../images/favicon.png" />
 </head>
@@ -20,7 +20,7 @@
         <nav>
             <ul>
                 <li><a href="../../index.php">Login</a></li>
-                <li><a href="./padel_register.php">Registreren</a></li>
+                <li><a href="../../padel_register.php">Registreren</a></li>
             </ul>
         </nav>
     </div>
