--- a/0_Padel_Website/src/html/header_No_Access.html
+++ b/0_Padel_Website/src/html/header_No_Access.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 GEEN TOEGANG</title>
     <link rel="stylesheet" href="src/css/styles.css" />
-    <link rel="shortcut icon" type="image/ico" href="../../images/favicon.ico" />
-    <link rel="shortcut icon" type="image/png" href="../../images/favicon.png" />
+    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
 </head>
 <body>
 <header>
     <div class="container">
         <a class="logo" href="./padel_home.php">
             <svg class="icon icon-sports_tennis">
-                <use xlink:href="../../icons/symbol-defs.svg#icon-sports_tennis"></use>
+                <use xlink:href="./icons/symbol-defs.svg#icon-sports_tennis"></use>
             </svg>
             <span>Padelsite</span>
         </a>
         <nav>
             <ul>
-                <li><a href="../../index.php">Login</a></li>
-                <li><a href="../../padel_register.php">Registreren</a></li>
+                <li><a href="./index.php">Login</a></li>
+                <li><a href="./padel_register.php">Registreren</a></li>
             </ul>
         </nav>
     </div>
