profile images cropped

--- a/0_Padel_Website/src/html/top_players.html
+++ b/0_Padel_Website/src/html/top_players.html
@@ -1,5 +1,5 @@
 <div class="playercard">
-    <img src="@pla_img_path@" alt="Player profile picture" width="200" height="200">
+    <img src="@pla_img_path@" alt="Player profile picture">
     <h2>@pla_name@ @pla_surname@</h2>
     <p>Level: @lvl_description@</p>
     <p>Matches won: @matches_won@</p>
