logout and register redirect fixed

--- a/0_Padel_Website/src/html/register.html
+++ b/0_Padel_Website/src/html/register.html
@@ -6,7 +6,7 @@
       <!-- meta info -->
       <input type="hidden" id="table" name="table" value="user">
       <input type="hidden" id="pkey" name="pkey" value="usr_id">
-      <input type="hidden" id="afterinsert" name="afterinsert" value="padel_home.php">
+      <input type="hidden" id="afterinsert" name="afterinsert" value="index.php">
       <input type="hidden" id="afterupdate" name="afterupdate" value="">
       <!-- end meta info -->
       <!--security-->
