--- a/src/html/header.html
+++ b/src/html/header.html
@@ -19,7 +19,7 @@
     </a>
     <nav>
       <ul>
-            <li><a class="active" href="./padel_home.php">Home</a></li>
+            <li><a href="./padel_home.php">Home</a></li>
             <li><a href="./padel_bookings.php">Booking</a></li>
             <li><a href="./padel_profile.php">Profile</a></li>
             <li><a href="./padel_logout.php">Logout</a></li>
