--- a/src/html/login.html
+++ b/src/html/login.html
@@ -6,11 +6,11 @@
       <!--security-->
       <input type="hidden" name="csrf" value="@csrf_token@">
       <!--end security-->
-      <input type="text" name="usr_email" placeholder="E-mail" required="required" />
+      <input type="text" name="pla_email" placeholder="E-mail" required="required" />
       <input
               type="password"
-              id="usr_password"
-              name="usr_password"
+              id="pla_password"
+              name="pla_password"
               placeholder="Wachtwoord"
               required="required"
       />
