--- a/src/html/register.html
+++ b/src/html/register.html
@@ -4,28 +4,28 @@
     <h2>Heb je al een account? <a href="index.php">Log dan hier in</a></h2>
     <form id="mainform" name="mainform" method="POST" action="src/lib/save.php">
       <!-- meta info -->
-      <input type="hidden" id="table" name="table" value="user">
-      <input type="hidden" id="pkey" name="pkey" value="usr_id">
+      <input type="hidden" id="table" name="table" value="players">
+      <input type="hidden" id="pkey" name="pkey" value="pla_id">
       <input type="hidden" id="afterinsert" name="afterinsert" value="index.php">
       <input type="hidden" id="afterupdate" name="afterupdate" value="">
       <!-- end meta info -->
       <!--security-->
       <input type="hidden" name="csrf" value="@csrf_token@">
       <!--end security-->
-      <input type="text" name="usr_voornaam" placeholder="Voornaam" required="required" />
-      @usr_voornaam_error@
-      <input type="text" name="usr_naam" placeholder="Naam" required="required" />
-      @usr_naam_error@
-      <input type="text" name="usr_email" placeholder="E-mail" required="required" />
-      @usr_email_error@
+      <input type="text" name="pla_name" placeholder="Voornaam" required="required" />
+      @pla_name_error@
+      <input type="text" name="pla_surname" placeholder="Naam" required="required" />
+      @pla_surname_error@
+      <input type="text" name="pla_email" placeholder="E-mail" required="required" />
+      @pla_email_error@
       <input
               type="password"
-              id="usr_password"
-              name="usr_password"
+              id="pla_password"
+              name="pla_password"
               placeholder="Wachtwoord"
               required="required"
       />
-      @usr_password_error@
+      @pla_password_error@
       <button type="submit" value="Login" class="button">Registreer!</button>
     </form>
   </div>
