--- a/src/html/profile_form.html
+++ b/src/html/profile_form.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<main>
+    <div class="container login">
+        <h1>Wijzig je gegevens indien nodig! </h1>
+        <form id="mainform" name="mainform" method="POST" action="src/lib/save.php">
+            <!-- meta info -->
+            <input type="hidden" id="table" name="table" value="players">
+            <input type="hidden" id="pkey" name="pkey" value="pla_id">
+            <input type="hidden" id="afterinsert" name="afterinsert" value="padel_profile.php">
+            <input type="hidden" id="afterupdate" name="afterupdate" value="padel_profile.php">
+            <!-- end meta info -->
+            <!--security-->
+            <input type="hidden" name="csrf" value="@csrf_token@">
+            <!--end security-->
+            <input type="text" name="pla_name" placeholder="@pla_name@"/>
+            @pla_name_error@
+            <input type="text" name="pla_surname" placeholder="@pla_surname@"/>
+            @pla_surname_error@
+            <input type="text" name="pla_lvl_id" placeholder="@pla_lvl_id@"/>
+            <input type="text" name="pla_lvl_id" placeholder="@pla_age@"/>
+            <input type="text" name="pla_lvl_id" placeholder="@pla_gender@"/>
+            <input type="text" name="pla_lvl_id" placeholder="@pla_number@"/>
 
-</body>
-</html>
+
+            <button type="submit" value="Login" class="button">Wijzigen maar!</button>
+        </form>
+    </div>
+</main>
