--- a/src/html/match_form.html
+++ b/src/html/match_form.html
@@ -1,4 +1,4 @@
-<form id="mainform" name="mainform" method="POST" action="../lib/save.php">
+<form id="mainform" name="mainform" method="POST" action="src/lib/save.php">
     <!-- meta info -->
     <input type="hidden" id="table" name="table" value="matches">
     <input type="hidden" id="pkey" name="pkey" value="mat_id">
@@ -11,52 +11,33 @@
     <input type="datetime-local" name="mat_time" placeholder="match date and time" required="required" />
     @mat_time_error@
 
-    @select_courts@
-    @mat_cou_id_error@
+    <input type='text' name="mat_cou_id" list="cou_name" placeholder="Location"/>
+    @datalist_courts@
+    @cou_name_error@
 
     <table>
         <tr>
             <th colspan="2"></th>
-            <th>Set 1</th>
-            <th>Set 2</th>
-            <th>Set 3</th>
         </tr>
         <tr>
             <td>
-                <input type="text" name="pla_name" placeholder="Team A Player 1" required="required" />
+                <input type="text" list="pla_name" name="mat_teaA_pla1_id" placeholder="Team A Player 1" required="required" />
             </td>
             <td>
-                <input type="text" name="pla_name" placeholder="Team A Player 2" required="required" />
+                <input type="text" list="pla_name" name="mat_teaA_pla2_id" placeholder="Team A Player 2" />
             </td>
-            <td>
-                <input type="number" name="pla_name" />
-            </td>
-            <td>@mat_set2_teaA@</td>
-            <td>@mat_set3_teaA@</td>
         </tr>
         <tr>
             <td>
-                <input type="text" name="pla_name" placeholder="Team B Player 1" required="required" />
+                <input type="text" list="pla_name" name="mat_teaB_pla1_id" placeholder="Team B Player 1" required="required" />
             </td>
             <td>
-                <input type="text" name="pla_name" placeholder="Team B Player 2" required="required" />
+                <input type="text" list="pla_name" name="mat_teaB_pla2_id" placeholder="Team B Player 2" />
             </td>
-            <td>@mat_set1_teaB@</td>
-            <td>@mat_set2_teaB@</td>
-            <td>@mat_set3_teaB@</td>
         </tr>
     </table>
-    <input type="text" name="usr_naam" placeholder="Naam" required="required" />
-    @usr_naam_error@
-    <input type="text" name="usr_email" placeholder="E-mail" required="required" />
-    @usr_email_error@
-    <input
-            type="password"
-            id="usr_password"
-            name="usr_password"
-            placeholder="Wachtwoord"
-            required="required"
-    />
-    @usr_password_error@
-    <button type="submit" value="Login" class="button">Registreer!</button>
+
+    @datalist_players@
+
+    <button type="submit" value="Login" class="button">Create Match</button>
 </form>
