new match form added

--- a/src/html/match_form.html
+++ b/src/html/match_form.html
@@ -13,7 +13,7 @@
 
     <input type='text' name="mat_cou_id" list="cou_name" placeholder="Location"/>
     @datalist_courts@
-    @cou_name_error@
+    @mat_cou_id_error@
 
     <table>
         <tr>
