--- a/src/html/profile_form.html
+++ b/src/html/profile_form.html
@@ -1,6 +1,6 @@
 <main>
     <div class="container login">
-        <h1>Wijzig je gegevens indien nodig! </h1>
+        <h1>Change your details </h1>
         <form id="mainform" name="mainform" method="POST" action="src/lib/save.php">
             <!-- meta info -->
             <input type="hidden" id="table" name="table" value="players">
@@ -21,7 +21,7 @@
             <input type="text" name="pla_lvl_id" placeholder="@pla_number@"/>
 
 
-            <button type="submit" value="Login" class="button">Wijzigen maar!</button>
+            <button type="submit" value="Login" class="button">Change it!</button>
         </form>
     </div>
 </main>
