--- a/src/html/booking.html
+++ b/src/html/booking.html
@@ -1,6 +1,6 @@
-<main>
-    <div class="container login">
-        <h1>Boek hier je veld</h1>
+
+    <div class="container login booking">
+        <h1>Get your booking here</h1>
         <form id="mainform" name="mainform" method="POST" action="src/lib/save.php">
             <!-- meta info -->
             <input type="hidden" id="table" name="table" value="matches">
@@ -16,7 +16,6 @@
             <input type="text" name="mat_cou_id" placeholder="@mat_cou_id@"/>
 
 
-            <button type="submit" value="Login" class="button">boeken!</button>
+            <button type="submit" value="Login" class="button">Book now!</button>
         </form>
     </div>
-</main>
