--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,7 +1,7 @@
 <main>
   <div class="container login">
-    <h1>Welkom op onze padelsite! </h1>
-    <h2>Gelieve eerst in te loggen of te <a href="padel_register.php">registreren!</a></h2>
+    <h1>Welkom on our padelsite! </h1>
+    <h2>Please log in first or <a href="padel_register.php">register!</a></h2>
     <form id="mainform" name="mainform" method="POST" action="src/lib/login_check.php">
       <!--security-->
       <input type="hidden" name="csrf" value="@csrf_token@">
@@ -14,7 +14,7 @@
               placeholder="Wachtwoord"
               required="required"
       />
-      <button type="submit" value="Login" class="button">Laat me binnen!</button>
+      <button type="submit" value="Login" class="button">Let me in!</button>
     </form>
   </div>
 </main>
