--- a/src/html/register.html
+++ b/src/html/register.html
@@ -1,7 +1,7 @@
 <main>
   <div class="container login">
-    <h1>Registreer je hier! </h1>
-    <h2>Heb je al een account? <a href="index.php">Log dan hier in</a></h2>
+    <h1>Register here! </h1>
+    <h2>Already have an account? <a href="index.php">Log in here</a></h2>
     <form id="mainform" name="mainform" method="POST" action="src/lib/save.php">
       <!-- meta info -->
       <input type="hidden" id="table" name="table" value="players">
@@ -12,9 +12,9 @@
       <!--security-->
       <input type="hidden" name="csrf" value="@csrf_token@">
       <!--end security-->
-      <input type="text" name="pla_name" placeholder="Voornaam" required="required" />
+      <input type="text" name="pla_name" placeholder="Name" required="required" />
       @pla_name_error@
-      <input type="text" name="pla_surname" placeholder="Naam" required="required" />
+      <input type="text" name="pla_surname" placeholder="Last name" required="required" />
       @pla_surname_error@
       <input type="text" name="pla_email" placeholder="E-mail" required="required" />
       @pla_email_error@
@@ -22,11 +22,11 @@
               type="password"
               id="pla_password"
               name="pla_password"
-              placeholder="Wachtwoord"
+              placeholder="Password"
               required="required"
       />
       @pla_password_error@
-      <button type="submit" value="Login" class="button">Registreer!</button>
+      <button type="submit" value="Login" class="button">Register!</button>
     </form>
   </div>
 </main>
