match edit added

--- a/src/html/match.html
+++ b/src/html/match.html
@@ -1,7 +1,7 @@
 <table class="match">
     <tr>
-        <th colspan="5">@mat_time@</th>
-        <th><a href="padel_match_edit.php?mat_id=@mat_id@">⚙ edit</a></th>
+        <th colspan="3">@mat_time@</th>
+        <th colspan="3"><a href="padel_match_edit.php?mat_id=@mat_id@">⚙ edit</a></th>
     </tr>
     <tr>
         <th colspan="3">@cou_name@</th>
