match_edit fixed

--- a/src/html/match_edit.html
+++ b/src/html/match_edit.html
@@ -8,6 +8,7 @@
     <!--security-->
     <input type="hidden" name="csrf" value="@csrf_token@">
     <!--end security-->
+    <input type="hidden" name="mat_id" value="@mat_id@"/>
         <table class="match edit">
             <tr>
                 <th colspan="6">@mat_time@</th>
@@ -46,5 +47,5 @@
         <option value="6"></option>
         <option value="7"></option>
     </datalist>
-    <button type="submit" value="Login" class="button">Change it!</button>
+    <button type="submit" value="change" class="button">Change it!</button>
 </form>
