--- a/src/html/profile_form.html
+++ b/src/html/profile_form.html
@@ -11,6 +11,8 @@
             <!--security-->
             <input type="hidden" name="csrf" value="@csrf_token@">
             <!--end security-->
+            <input type="hidden" name="pla_id" value="@pla_id@"/>
+
             <input type="text" name="pla_name" placeholder="@pla_name@"/>
             @pla_name_error@
             <input type="text" name="pla_surname" placeholder="@pla_surname@"/>
