profile_form fixed

--- a/src/html/match_edit.html
+++ b/src/html/match_edit.html
@@ -47,5 +47,5 @@
         <option value="6"></option>
         <option value="7"></option>
     </datalist>
-    <button type="submit" value="change" class="button">Change it!</button>
+    <button type="submit" value="change" class="button">Confirm score</button>
 </form>
