--- a/src/html/profile_form.html
+++ b/src/html/profile_form.html
@@ -5,9 +5,9 @@
         <form id="imgform" action="src/lib/upload.php" method="POST" enctype="multipart/form-data">
             <img src="@pla_img_path@" alt="profile picture" height="200px" width="200px">
             <input type="file" name="fileToUpload" id="fileToUpload" hidden>
-            <label for="fileToUpload">Choose your file</label>
+            <label class="button" for="fileToUpload">Choose your file</label>
             <input type="submit" value="Upload Image" name="submit" id="submitfile" hidden>
-            <label for="submitfile">Upload your file</label>
+            <label class="button" for="submitfile">Upload your file</label>
         </form>
 
         <form id="mainform" name="mainform" method="POST" action="src/lib/save.php">
