--- a/src/html/match_form.html
+++ b/src/html/match_form.html
@@ -15,25 +15,33 @@
     @mat_cou_id_error@
     <input type="hidden" name="mat_cou_id" id="matDate-hidden">
 
-    <table>
+    <table class="booking">
         <tr>
+        </tr>
+        <tr>
+            <td>
+                <label for="plaA1">Team A</label>
+            </td>
             <td>
                 <input class="dataField" list="pla_name" name="mat_teaA_pla1_id" id="plaA1" placeholder="Team A Player 1" required="required">
                 <input type="hidden" name="mat_teaA_pla1_id" id="plaA1-hidden">
             </td>
             <td>
-                <input class="dataField" list="pla_name" name="mat_teaA_pla2_id" id="plaA2" placeholder="Team A Player 2">
-                <input type="hidden" name="mat_teaA_pla2_id" id="plaA2-hidden">
+                <input class="dataField" list="pla_name" name="mat_teaB_pla2_id" id="plaB2" placeholder="Team B Player 2">
+                <input type="hidden" name="mat_teaB_pla2_id" id="plaB2-hidden">
             </td>
         </tr>
         <tr>
             <td>
-                <input class="dataField" list="pla_name" name="mat_teaB_pla1_id" id="plaB1" placeholder="Team B Player 1" required="required">
-                <input type="hidden" name="mat_teaB_pla1_id" id="plaB1-hidden">
+                <label for="plaB1">Team B</label>
             </td>
             <td>
-                <input class="dataField" list="pla_name" name="mat_teaB_pla2_id" id="plaB2" placeholder="Team B Player 2">
-                <input type="hidden" name="mat_teaB_pla2_id" id="plaB2-hidden">
+                <input class="dataField" list="pla_name" name="mat_teaA_pla2_id" id="plaA2" placeholder="Team A Player 2">
+                <input type="hidden" name="mat_teaA_pla2_id" id="plaA2-hidden">
+            </td>
+            <td>
+                <input class="dataField" list="pla_name" name="mat_teaB_pla1_id" id="plaB1" placeholder="Team B Player 1" required="required">
+                <input type="hidden" name="mat_teaB_pla1_id" id="plaB1-hidden">
             </td>
         </tr>
     </table>
