--- a/src/html/match_form.html
+++ b/src/html/match_form.html
@@ -23,11 +23,11 @@
                 <label for="plaA1">Team A</label>
             </td>
             <td>
-                <input class="dataField" list="pla_name" name="mat_teaA_pla1_id" id="plaA1" placeholder="Team A Player 1" required="required">
+                <input class="dataField" list="pla_name" name="mat_teaA_pla1_id" id="plaA1" placeholder="Team A player 1" required="required">
                 <input type="hidden" name="mat_teaA_pla1_id" id="plaA1-hidden">
             </td>
             <td>
-                <input class="dataField" list="pla_name" name="mat_teaB_pla2_id" id="plaB2" placeholder="Team B Player 2">
+                <input class="dataField" list="pla_name" name="mat_teaB_pla2_id" id="plaB2" placeholder="Team B player 2">
                 <input type="hidden" name="mat_teaB_pla2_id" id="plaB2-hidden">
             </td>
         </tr>
@@ -36,11 +36,11 @@
                 <label for="plaB1">Team B</label>
             </td>
             <td>
-                <input class="dataField" list="pla_name" name="mat_teaA_pla2_id" id="plaA2" placeholder="Team A Player 2">
+                <input class="dataField" list="pla_name" name="mat_teaA_pla2_id" id="plaA2" placeholder="Team A player 2">
                 <input type="hidden" name="mat_teaA_pla2_id" id="plaA2-hidden">
             </td>
             <td>
-                <input class="dataField" list="pla_name" name="mat_teaB_pla1_id" id="plaB1" placeholder="Team B Player 1" required="required">
+                <input class="dataField" list="pla_name" name="mat_teaB_pla1_id" id="plaB1" placeholder="Team B player 1" required="required">
                 <input type="hidden" name="mat_teaB_pla1_id" id="plaB1-hidden">
             </td>
         </tr>
@@ -65,5 +65,5 @@
         }));
     </script>
 
-    <button type="submit" value="submit" class="button">Create Match</button>
+    <button type="submit" value="submit" class="button">Create match</button>
 </form>
