--- a/src/html/header_start.html
+++ b/src/html/header_start.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 GEEN TOEGANG</title>
+    <title>Welcome @ PadelSite</title>
     <link rel="stylesheet" href="src/css/styles.css" />
     <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
@@ -20,7 +20,7 @@
         <nav>
             <ul>
                 <li><a href="./index.php">Login</a></li>
-                <li><a href="./padel_register.php">Registreren</a></li>
+                <li><a href="./padel_register.php">Register</a></li>
             </ul>
         </nav>
     </div>
