--- a/src/html/match_edit.html
+++ b/src/html/match_edit.html
@@ -9,7 +9,9 @@
     <input type="hidden" name="csrf" value="@csrf_token@">
     <!--end security-->
     <input type="hidden" name="mat_id" value="@mat_id@"/>
-        <table class="match edit">
+    <input type="hidden" name="mat_time" value="@mat_time@"/>
+
+    <table class="match edit">
             <tr>
                 <th colspan="6">@mat_time@</th>
             </tr>
